BusOne/src/objects/Sample_Lot_Item_vod__c.object
<CustomObject>
    <description>Contains a list of attributes pertaining to a User&apos;s Sample Lots available for selection on Sample Transactions and Sample Calls.</description>
    <fields>
        <fullName>Active_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that the particular Sample Lot Item is available for selection on Sample Transactions and Sample Calls.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sample_Lot_Item_Id_vod__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>The External Id used to enforce uniqueness of the Sample Lot Item record. The format of the Id is Owner Id_Product Name_Sample Lot Name_Tag Alert.</description>
        <externalId>true</externalId>
        <label>Sample Lot Item Id</label>
        <length>200</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Sample_Lot_vod__c</fullName>
        <description>The Sample Lot that the Sample Lot Item is associated to.</description>
        <label>Sample Lot</label>
        <referenceTo>Sample_Lot_vod__c</referenceTo>
        <relationshipLabel>Sample Lot Items</relationshipLabel>
        <relationshipName>Sample_Lot_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Tag_Alert_Number_vod__c</fullName>
        <description>The Tag Alert Number associated with a User&apos;s Sample Lot record.</description>
        <label>Tag Alert Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Sample Lot Item</label>
    <nameField>
        <displayFormat>SLI-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sample Lot Items</pluralLabel>
    <recordTypes>
        <fullName>TagAlert_vod</fullName>
        <active>true</active>
        <description>Stores a list of Tag Alert numbers associated with a User&apos;s Sample Lots for cold chain sample products.</description>
        <label>TagAlert_vod</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>